--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -1,5 +1,5 @@
 
-<h1>Hello DevOps</h1>
+<h1>Hello DevOps New</h1>
 <form action="go" method="get">
 Name:<input type="text" name="userName"/><br/>
 Password:<input type="password" name="userPass"/><br/>
